# internal/transport/handlers/lyricHandlers.go
@@ -16,22 +16,22 @@ import (
 //	@Tags			Lyrics
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		int					true	"Lyric ID"	Format(int)
-//	@Success		200	{object}	models.Lyric		"Successfully retrieved lyrics"
-//	@Failure		400	{object}	map[string]string	"Invalid ID format"
-//	@Failure		404	{object}	map[string]string	"Lyrics not found"
+//	@Param			id	path		int					    true	"Lyric ID"	Format(int)
+//	@Success		200	{object}	models.Lyric		    "Successfully retrieved lyrics"
+//	@Failure		400	{object}	models.ErrorResponse	"Invalid ID format"
+//	@Failure		404	{object}	models.ErrorResponse	"Lyrics not found"
 //	@Router			/lyrics/{id} [get]
 func GetLyric(c *gin.Context, logger *slog.Logger) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		logger.Warn("Invalid ID format", "error", err, "id", c.Param("id"))
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
+		models.NewErrorResponse(c, 400, err.Error())
 		return
 	}
 	lyric, err := postgres.GetLyric(uint(id))
 	if err != nil {
 		logger.Error("Invalid input format", "error", err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "lyric not found"})
+		models.NewErrorResponse(c, 500, err.Error())
 		return
 	}
 	logger.Info("Successfully fetched lyric", "id", id)
@@ -46,23 +46,23 @@ func GetLyric(c *gin.Context, logger *slog.Logger) {
 //	@Tags			Lyrics
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path		int					true	"Lyric ID"	Format(int)
-//	@Param			lyric	body		models.Lyric		true	"Updated lyric object"
-//	@Success		200		{object}	models.Lyric		"Successfully updated lyrics"
-//	@Failure		400		{object}	map[string]string	"Invalid input format"
-//	@Failure		404		{object}	map[string]string	"Lyrics not found"
+//	@Param			id		path		int					    true	"Lyric ID"	Format(int)
+//	@Param			lyric	body		models.Lyric		    true	"Updated lyric object"
+//	@Success		200		{object}	models.Lyric		    "Successfully updated lyrics"
+//	@Failure		400		{object}	models.ErrorResponse	"Invalid input format"
+//	@Failure		404		{object}	models.ErrorResponse	"Lyrics not found"
 //	@Router			/lyrics/{id} [put]
 func UpdateLyric(c *gin.Context, logger *slog.Logger) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		logger.Warn("Invalid ID format", "error", err, "id", c.Param("id"))
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
+		models.NewErrorResponse(c, 400, err.Error())
 		return
 	}
 	var updateLyric models.Lyric
 	if err = c.ShouldBindJSON(&updateLyric); err != nil {
 		logger.Error("Invalid input format", "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		models.NewErrorResponse(c, 400, err.Error())
 		return
 	}
 	logger.Info("Received update data", "lyric", updateLyric)
@@ -70,10 +70,10 @@ func UpdateLyric(c *gin.Context, logger *slog.Logger) {
 	if err != nil {
 		if err.Error() == "record not found" {
 			logger.Warn("Lyric not found", "id", id)
-			c.JSON(http.StatusNotFound, gin.H{"error": "lyric not found"})
+			models.NewErrorResponse(c, 404, err.Error())
 		} else {
 			logger.Error("Failed to update lyric", "error", err)
-			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			models.NewErrorResponse(c, 500, err.Error())
 		}
 		return
 	}
@@ -89,31 +89,31 @@ func UpdateLyric(c *gin.Context, logger *slog.Logger) {
 //	@Tags			Lyrics
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		int					true	"Lyric ID"	Format(int)
-//	@Success		200	{object}	map[string]int		"Successfully deleted lyric ID"
-//	@Failure		400	{object}	map[string]string	"Invalid lyric ID format"
-//	@Failure		404	{object}	map[string]string	"Lyrics not found"
+//	@Param			id	path		int					    true	"Lyric ID"	Format(int)
+//	@Success		200	{object}	models.Response		    "Successfully deleted lyric ID"
+//	@Failure		400	{object}	models.ErrorResponse	"Invalid lyric ID format"
+//	@Failure		404	{object}	models.ErrorResponse	"Lyrics not found"
 //	@Router			/lyrics/{id} [delete]
 func DeleteLyric(c *gin.Context, logger *slog.Logger) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		logger.Warn("Invalid song ID for deletion", "id", c.Param("id"), "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
+		models.NewErrorResponse(c, 400, err.Error())
 		return
 	}
 	err = postgres.DeleteLyric(uint(id))
 	if err != nil {
 		if err.Error() == "record not found" {
 			logger.Warn("Song not found for deletion", "id", id)
-			c.JSON(http.StatusNotFound, gin.H{"error": "song not found"})
+			models.NewErrorResponse(c, 404, err.Error())
 		} else {
 			logger.Error("Error deleting lyric", "id", id, "error", err)
-			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			models.NewErrorResponse(c, 500, err.Error())
 		}
 		return
 	}
 	logger.Info("Successfully deleted lyric", "id", id)
-	c.JSON(http.StatusOK, gin.H{"deleted_lyric_id": id})
+	models.NewResponse(c, id, "successfully deleted")
 
 }
 
@@ -126,13 +126,13 @@ func DeleteLyric(c *gin.Context, logger *slog.Logger) {
 //	@Produce		json
 //	@Param			lyric	body		models.Lyric		true	"Lyric object containing song ID and text"
 //	@Success		201		{object}	models.Lyric		"Successfully created lyric entry"
-//	@Failure		400		{object}	map[string]string	"Invalid input format"
+//	@Failure		400		{object}	models.ErrorResponse
 //	@Router			/lyrics [post]
 func AddLyric(c *gin.Context, logger *slog.Logger) {
 	var newLyric models.Lyric
 	if err := c.ShouldBindJSON(&newLyric); err != nil {
 		logger.Error("Invalid input for new lyric", "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		models.NewErrorResponse(c, 400, err.Error())
 		return
 	}
 	logger.Info("Received new song", "song", newLyric)
@@ -140,6 +140,7 @@ func AddLyric(c *gin.Context, logger *slog.Logger) {
 	if err != nil {
 		logger.Error("Error adding lyric", "error", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		models.NewErrorResponse(c, 500, err.Error())
 		return
 	}
 	logger.Info("Successfully added new lyric", "song_id", newLyric.ID)
